--- a/src/1-Intro/1-4_autonomous-kinematics-measurements/optimization-routine.tex
+++ b/src/1-Intro/1-4_autonomous-kinematics-measurements/optimization-routine.tex
@@ -5,7 +5,7 @@ Broadly, optimization is the process of minimizing or maximizing an objective fu
     \label{eq:optim}
 \end{equation}
 
-A drawback to our pipeline is that there is no analytic form of the objective function between each segmentation and projected contour; they must be re-sampled over a specified range in order to approximate objective function values and gradients. This defines a \emph{black box} optimization routine, which is well studied in the literature \cite{audetDerivativeFreeBlackboxOptimization2017}. In this type of function, it is not possible to use gradient-based methods to determine a minimum value for the objective function, one must use heuristics or ad-hoc methods to find the minimum location. Lipschitzian optimization offers an appealing black box optimization approach because it satisfies our need for a global search algorithm with provable convergence. First, we start with the definition of Lipschitz continuous, which places bounds on the rate of change of a function specified by some constant, called the Lipschitz constant. With a known Lipschitz constant, is is possible to find the value for the global minimum of optimization function \cite{dreisigmeyerDIRECTSEARCHMETHODS2007}.
+A drawback to our pipeline is that there is no analytic form of the objective function between each segmentation and projected contour; they must be re-sampled over a specified range in order to approximate objective function values and gradients. This defines a \emph{black box} optimization routine, which is well studied in the literature \cite{audetDerivativeFreeBlackboxOptimization2017}. In this type of function, it is not possible to use gradient-based methods to determine a minimum value for the objective function, one must use heuristics or ad-hoc methods to find the minimum location. Lipschitzian optimization offers an appealing black box optimization approach because it satisfies our need for a global search algorithm with provable convergence. First, we start with the definition of Lipschitz continuous, which places bounds on the rate of change of a function specified by some constant, called the Lipschitz constant. With a known Lipschitz constant, it is possible to find the value for the global minimum of optimization function \cite{dreisigmeyerDIRECTSEARCHMETHODS2007}.
 
 \begin{mdframed}
     \begin{definition}[Lipschitz Continuous]
