--- a/src/aim3/aim3.tex
+++ b/src/aim3/aim3.tex
@@ -7,8 +7,8 @@ This same need for standardized metrics exists when quantifying joint kinematics
 Unfortunately, no such standardization exists for quantifying joint kinematics.
 While most groups perform similar activities of daily living (Some form of walking, stair rise, chair rise, kneel, lunge, and squat), variations in how these activities are executed hinder direct comparison accuracy.
 
-So, this chapter describes a data-driven approach toward being able to select the highest yield activities to be included in a clinical kinematics examination.
-o render the autonomous measurement of joint kinematics a viable clinical tool, the time to collect the data must not be excessive, and so a brief and succinct set of activities is preferred.
+Thus, this chapter describes a data-driven approach toward being able to select the highest yield activities to be included in a clinical kinematics examination.
+To render the autonomous measurement of joint kinematics a viable clinical tool, the time to collect the data must not be excessive, and so a brief and succinct set of activities is preferred.
 From these constraints, the first approach stems from the thought, ``All kinematics data is coming from the same patient. Are there underlying characteristics from one activity that translate to all activities?''
 An example might arise: ``Can we predict the patient's stair rise kinematics from their walking kinematics?''
 The motivating intuition behind these ideas is that they all come from the same patient, and are being driven by the same underlying musculature.
