--- a/src/conclusion/conclusion.tex
+++ b/src/conclusion/conclusion.tex
@@ -62,7 +62,7 @@ It is plausible that newer algorithms could surpass the performance of the curre
 Although enhancing segmentation accuracy could theoretically improve the overall efficacy of these pipelines, it remains to be assessed whether such improvements would translate to clinically meaningful enhancements in registration accuracy.
 
 Another technological improvement would be the introduction of more robust cost functions that can more accurately mimic a human operator during the manual registration process.
-There are many subtle details that are difficult to capture algorithmically (e.g. small screw holes in implants, the location of anatomic features, etc.) which are invaluable for human supervised kinematics measurements, but aren't yet captured mathematically.
+Many subtle details that are difficult to capture algorithmically (e.g. small screw holes in implants, the location of anatomic features, etc.) are present, which are invaluable for human supervised kinematics measurements, but aren't yet captured mathematically.
 A systematic effort toward determining the best way to incorporate these features into a robust cost function would drastically improve the algorithmic performance of these registration pipelines.
 
 A notable limitation within the existing optimization framework is its reliance on Euler-angle representation for determining implant orientation.
